--- a/База_рекламаций/reclamationhub/reports/templates/reports/analytics.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/analytics.html
@@ -33,7 +33,7 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h5 class="card-title">📊 Количество признанных/непризнанных рекламаций</h5>
-                    <p class="card-text">Отчет по количеству признанных/непризнанных рекламаций накопительным итогом с начала года и сохранение в файл</p>
+                    <p class="card-text">Отчет по количеству признанных/непризнанных рекламаций по выбранным месяцам или накопительным итогом с начала года и сохранение в файл</p>
                     <a href="{% url 'reports:accept_defect' %}" class="btn btn-primary">Открыть модуль</a>
                 </div>
             </div>
