Добавлена ссылка add_group_invoice_out

--- a/База_рекламаций/reclamationhub/templates/admin/add_group_invoice_into.html
+++ b/База_рекламаций/reclamationhub/templates/admin/add_group_invoice_into.html
@@ -1,4 +1,5 @@
 <!--
+ Шаблон формы группового добавления накладной прихода рекламационных изделий.
  Наследуются от базового шаблона, сохраняя всю базовую структуру и стили.
  При необходимости можно добавлять свои стили или переопределять блоки
 -->
@@ -17,4 +18,12 @@
 {% block extrastyle %}
 {{ block.super }}
 {# Если нужны дополнительные стили специфичные для формы накладных #}
+{% endblock %}
+
+<!-- Добавляем ссылку "Вернуться к рекламациям" внизу формы -->
+{% block content %}
+{{ block.super }}
+    <a href="{% url 'admin:reclamations_reclamation_changelist' %}" class="btn btn-secondary">
+        ← Вернуться к рекламациям
+    </a>
 {% endblock %}
