--- a/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
@@ -17,13 +17,13 @@
 
 {% block object-tools-items %}
     <li>
-        <a href="{% url 'admin:export_excel' %}" class="addlink">
-            Экспорт в Excel
+        <a href="{% url 'admin:add_invoice_into' %}" class="addlink">
+            Групп накладная прихода
         </a>
     </li>
     <li>
-        <a href="{% url 'admin:add_invoice' %}" class="addlink">
-            Групповая накладная
+        <a href="{% url 'admin:add_invoice_out' %}" class="addlink">
+            Групп накладная отгрузки
         </a>
     </li>
     {{ block.super }}
