--- a/База_рекламаций/reclamationhub/templates/admin/add_group_investigation.html
+++ b/База_рекламаций/reclamationhub/templates/admin/add_group_investigation.html
@@ -18,3 +18,15 @@
 {{ block.super }}
 {# Если нужны дополнительные стили специфичные для формы актов исследования #}
 {% endblock %}
+
+<!-- Добавляем ссылку "Вернуться к рекламациям" внизу формы -->
+{% block content %}
+{{ block.super }}
+    <a href="{% url 'admin:investigations_investigation_changelist' %}" class="btn btn-secondary">
+        ← Вернуться к исследованиям
+    </a>
+    <br><br>
+    <a href="{% url 'admin:reclamations_reclamation_changelist' %}" class="btn btn-secondary">
+        ← Вернуться к рекламациям
+    </a>
+{% endblock %}
