--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -46,7 +46,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;">
+                        <!-- <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;"> -->
+                        <a class="nav-link text-white" href="{% url 'admin:claims_claim_changelist' %}">
                             Претензии
                         </a>
                     </li>
