--- a/База_рекламаций/reclamationhub/reports/templates/reports/references.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/references.html
@@ -1,4 +1,4 @@
-<!-- Шаблон страницы с аналитикой и отчетами -->
+<!-- Шаблон основной страницы со справками и отчетами -->
 
 {% extends 'home.html' %}
 {% load static %}
