--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -53,8 +53,14 @@
                     </li>
                     <li class="nav-item">
                         <!-- <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;"> -->
-                        <a class="nav-link text-white" href="{% url 'reports:analytics' %}" class="nav-link">
+                        <a class="nav-link text-white" href="{% url 'reports:references' %}" class="nav-link">
                             Справки и отчеты
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <!-- <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;"> -->
+                        <a class="nav-link text-white" href="{% url 'analytics:analytic' %}" class="nav-link">
+                            Аналитика
                         </a>
                     </li>
                 </ul>
