--- a/База_рекламаций/reclamationhub/templates/includes/stats_cards.html
+++ b/База_рекламаций/reclamationhub/templates/includes/stats_cards.html
@@ -1,5 +1,5 @@
 <!-- Карточки с общей статистикой -->
-<!-- Создали отдельный файл, т.к. карточки используются в других шаблонах: home.html и reports\analytics.html через include -->
+<!-- Создали отдельный файл, т.к. карточки используются в других шаблонах: home.html и reports\references.html через include -->
 
 <div class="row mb-4">
     <div class="col-md-3">
