--- a/База_рекламаций/reclamationhub/reports/templates/reports/db_search.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/db_search.html
@@ -12,7 +12,7 @@
         <div class="col-12">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'reports:analytics' %}">Аналитика</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'reports:references' %}">Отчеты</a></li>
                     <li class="breadcrumb-item active">{{ page_title }}</li>
                 </ol>
             </nav>
