--- a/База_рекламаций/reclamationhub/reports/templates/reports/references.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/references.html
@@ -23,8 +23,8 @@
         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">📊 Справка по количеству рекламаций</h5>
-                    <p class="card-text">Cправка по количеству поступивших рекламаций за период времени и сохранение в файл Excel</p>
+                    <h5 class="card-title">📊 Справка по количеству поступивших сообщений</h5>
+                    <p class="card-text">Cправка к совещанию по качеству по количеству поступивших сообщений за период времени и сохранение в файл Excel</p>
                     <a href="{% url 'reports:enquiry_period' %}" class="btn btn-primary">Открыть модуль</a>
                 </div>
             </div>
