--- a/База_рекламаций/reclamationhub/reports/templates/reports/accept_defect.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/accept_defect.html
@@ -133,7 +133,7 @@
                                         <th>Количество</th>
                                         <th class="text-success">Признано</th>
                                         <th class="text-danger">Отклонено</th>
-                                        <th class="text-warning">Не_поступало</th>
+                                        <th class="text-warning">Нет_решения</th>
                                     </tr>
                                 </thead>
                                 <tbody>
